# NSU_OPP_LABS

./: .gitignore
experimentals/: a.out  gather.c  main.c  mpirun.c  rezka_matrici.c  run.sh  scatter_less_than_pcs.c  send_to_self.c
lab1/: CMakeLists.txt  build.sh  notes.txt  task1_Мустакаев_22204.odt
lab1/src/: main.c  main2.c  main3.c
notes/: mpi_ops.txt
task1/src/: a.out  main.c  main1.c  main2.c
task2/src/graph/gr1/: main.py
task2/src/graph/gr2/: main.py
task2/src/graph/gr3/: main.py
task2/src/pars/: main_par_model1.c  main_par_model2.c  main_par_model3.c  tmp.c
task2/src/seqs/: a.out  main_seq_model1.c  main_seq_model2.c  main_seq_model3.c  run.sh
task3/exps/: basic_omp.c  dva_vec.c  exp.c  exp2.c  exp3.c  fix_gonka.c  funcs.c  gonka.c  main.c  manual_num_threads.c  run.sh
task3/graph/: main.py
task3/src/: a.out  main_par_model1.c  main_par_model2.c  main_par_model3.c
task4/exps/: a.out  main.c
task4/src/: a.out  main.c  run.sh
task5/exps/: main.cpp
task5/src/: main.cpp  run.sh
task6/src/: main.cpp
test/tasks_2022/task1/mpi_impl/src/: main.c
vlasenko_test/tasks_2022/task1/mpi_impl/: CMakeLists.txt  build.sh  run.sh
